Added Login & profile GET APIs
