# swagger.json
@@ -3,32 +3,24 @@
   "info": {
     "description": "This is an auth demo app",
     "version": "1.0.0",
-    "title": "Auth Server",
-    "termsOfService": "http://swagger.io/terms/",
-    "contact": {
-      "email": "abhisshiv@gmail.com"
-    }
+    "title": "Auth Server"
   },
-  "host": "petstore.swagger.io",
-  "basePath": "/v1",
   "tags": [
     {
       "name": "AuthServer",
       "description": "Authentication Service"
-    },
-    {
-      "name": "user",
-      "description": "Operations about user",
-      "externalDocs": {
-        "description": "Find out more about our store",
-        "url": "http://swagger.io"
-      }
     }
   ],
   "schemes": [
-    "https",
     "http"
   ],
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
   "paths": {
     "/user/register": {
       "post": {
@@ -54,15 +46,15 @@
           }
         ],
         "responses": {
-            "200": {
-                "description": "successful operation"
-              },
-              "400": {
-                "description": "Bad request"
-              },
-              "409": {
-                "description": "user already exists"
-              }
+          "201": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "409": {
+            "description": "user already exists"
+          }
         }
       }
     },
@@ -102,7 +94,7 @@
       }
     },
     "/user/logout": {
-      "get": {
+      "post": {
         "tags": [
           "user"
         ],
@@ -119,16 +111,45 @@
           }
         }
       }
+    },
+    "/user/getProfile": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "summary": "Fetch the logged in user details",
+        "description": "",
+        "operationId": "fetchUser",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "401": {
+            "description": "Invalid token supplied"
+          },
+          "403": {
+            "description": "Unauthorised access"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
     "User": {
       "type": "object",
       "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
         "firstName": {
           "type": "string"
         },
